fixed text alignment issue

--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -2,12 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Sarabun';
-}
-
-.slogan-container {
     text-align: center;
-    font-size: 25px;
-    display: inline-block;
 }
 
 .homepage-logo {
@@ -15,8 +10,13 @@
     justify-content: center;
 }
 
-.slogan {
+.slogan-container {
+    display: inline-block; 
     text-align: left;
+    font-size: 25px;
 }
+
+
+
 
 
